--- a/Teste Textual/app/src/main/res/layout/activity_main.xml
+++ b/Teste Textual/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        tools:context=".MainActivity" android:orientation="vertical" android:gravity="center" android:padding="30sp">
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:id="@+id/cx01" android:gravity="center"
+    >
+        <TextView
+                android:text="Clique no texto para escolher um arquivo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:textSize="20sp"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/inpDoc"
+                style="@style/Widget.AppCompat.EditText" android:hint="*nome do documento vai aqui*"
+                android:textSize="20sp"/>
+        <Button
+                android:text="Enviar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/btnEnviar" android:textSize="20sp"/>
+    </LinearLayout>
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:id="@+id/cx02" android:visibility="gone">
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            <Button
+                    android:text="Voltar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/btnVoltar" android:textSize="20sp"/>
+            <TextView
+                    android:text="TextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/txtResultado" android:textSize="20sp"/>
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
